[package]
name = "mrtui"
version = "0.1.0"
edition = "2021"

authors = ["PraxTube"]
description = "Terminal tool to look up block information from mempool."
homepage = "https://github.com/PraxTube/mrtui"
documentation = "https://github.com/PraxTube/mrtui"
repository = "https://github.com/PraxTube/mrtui"
readme = "README.md"

license = "MIT"

keywords = ["mempool", "bitcoin", "blockchain", "CLI"]
categories = ["command-line-interface", "cryptography::cryptocurrencies", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = [ "json" ] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
